--- a/src/styles/capabilities.scss
+++ b/src/styles/capabilities.scss
@@ -9,7 +9,7 @@
       margin-bottom: 1rem;
     }
     p{
-      color: #9fd9c5;
+      color: #6fa2c8;
       text-align: center;
       font-size: 22px;
       font-family: 'Open Sans', sans-serif;
