--- a/src/styles/practiceAreas.scss
+++ b/src/styles/practiceAreas.scss
@@ -1,6 +1,6 @@
 #practice-areas-id{
   // margin-top: 3rem;
-  background-image: linear-gradient(to bottom, #415169, #d4e8dc);
+  background-image: linear-gradient(to bottom, #415169, #6fa2c8);
   padding-bottom: 202px;
 
   .section-header{
