--- a/src/styles/singlePage.scss
+++ b/src/styles/singlePage.scss
@@ -7,15 +7,33 @@
   }
 }
 
+.single-page-hero{
+  .hero-content{
+    h1.tag-line{
+      color: white;
+    }
+  }
+}
+
 .single-page{
 
   h1.header{
-    font-size: 1.5rem;
-    margin-top: 1rem;
+    font-size: 42px;
+    margin-top: 107px;
     margin-bottom: 1rem;
+    color: #6fa2c8;
   }
 
-  .wrap{
+  .body{
+    font-size: 18px;
+    line-height: 24px;
+  }
+  .content-footer{
+    margin-bottom: 107px;
+  }
+}
+
+  // .wrap{
     // grid-template-columns:
     //   minmax(400px, 500px)
     //   minmax(400px, 500px);
@@ -29,101 +47,101 @@
     // @media only screen and (min-width : 600px) {
     //   display: grid;
     // }
+    //
+    // display: flex;
+    // flex-wrap: wrap;
+    // flex-direction: row;
 
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-
-    .image{
-      // min-height: 200px;
-      // max-height: 600px;
-      // min-width: 500px;
-
-
-      @media only screen and (min-width : 760px) {
-        min-width: 462px;
-        max-height: 481px;
-        max-width: 720px;
-        flex: 1;
-      }
-
-      height: 100%;
-      width: 100%;
-
-      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-      // grid-area: image;
-      margin-bottom: 3rem;
+    // .image{
+    //   // min-height: 200px;
+    //   // max-height: 600px;
+    //   // min-width: 500px;
+    //
+    //
+    //   @media only screen and (min-width : 760px) {
+    //     min-width: 462px;
+    //     max-height: 481px;
+    //     max-width: 720px;
+    //     flex: 1;
+    //   }
+    //
+    //   height: 100%;
+    //   width: 100%;
+    //
+    //   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    //   // grid-area: image;
+    //   margin-bottom: 3rem;
 
       // @media only screen and (min-width : 500px) {
       //   min-width: 300px;
       // }
-    }
+    // }
 
-    .big-para{
-      // grid-area: big-para;
-      font-size: 1.2rem;
-      margin-bottom: 3rem;
+    // .big-para{
+    //   // grid-area: big-para;
+    //   font-size: 1.2rem;
+    //   margin-bottom: 3rem;
+    //
+    //
+    //
+    //   @media only screen and (min-width : 760px) {
+    //     min-width: 400px;
+    //     text-align: left;
+    //     padding-right:1rem;
+    //     flex: 1;
+    //   }
+    // }
 
 
+  // }
+  // .small-para{
+  //   grid-area: small-para;
+  //   font-size: 1.3rem;
+  //   margin-bottom: 5rem;
+  // }
+// }
 
-      @media only screen and (min-width : 760px) {
-        min-width: 400px;
-        text-align: left;
-        padding-right:1rem;
-        flex: 1;
-      }
-    }
+// .single-page.dui{
+//   .big-para{
+//     font-size: 1.4rem;
+//   }
+//   .small-para{
+//
+//   }
+// }
 
+// .single-page.domestic-violence{
+//   .big-para{
+//     font-size: 1.4rem;
+//   }
+//   .small-para{
+//
+//   }
+// }
 
-  }
-  .small-para{
-    grid-area: small-para;
-    font-size: 1.3rem;
-    margin-bottom: 5rem;
-  }
-}
-
-.single-page.dui{
-  .big-para{
-    font-size: 1.4rem;
-  }
-  .small-para{
-
-  }
-}
-
-.single-page.domestic-violence{
-  .big-para{
-    font-size: 1.4rem;
-  }
-  .small-para{
-
-  }
-}
-
-.single-page.municipal{
-  .big-para{
-    font-size: 1.4rem;
-  }
-  .small-para{
-
-  }
-}
-
-.single-page.juvenile{
-  .big-para{
-    font-size: 1.4rem;
-  }
-  .small-para{
-
-  }
-}
-
-.single-page.felony{
-  .big-para{
-    font-size: 1.4rem;
-  }
-  .small-para{
-
-  }
-}
+// .single-page.municipal{
+//   .big-para{
+//     font-size: 1.4rem;
+//   }
+//   .small-para{
+//
+//   }
+// }
+//
+// .single-page.juvenile{
+//   .big-para{
+//     font-size: 1.4rem;
+//   }
+//   .small-para{
+//
+//   }
+// }
+//
+// .single-page.felony{
+//   .big-para{
+//     font-size: 1.4rem;
+//   }
+//   .small-para{
+//
+//   }
+// }
