--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -1,23 +1,16 @@
 .about{
   text-align: left;
-  padding: 134px 0 134px;
-  // background-color: #f9f5f2;
-  // padding: 1rem;
+  padding: 60px 0 60px;
 
   @media only screen and (min-width : 990px) {
      text-align: left;
   }
 
-
-
-  // .subheader{
-  //   margin: 0;
-  //   font-size: 2rem;
-  //   margin-bottom: 2rem;
-  // }
+  @media only screen and (min-width : 650px) {
+     padding: 134px 0 134px;
+  }
 
   h1.header-mobile{
-    // margin-top: 3rem;
     font-size: 3rem;
     font-weight: 700;
     font-size: 42px;
@@ -48,7 +41,6 @@
         order: 1;
       }
       h1.header-desktop{
-        // margin-top: 3rem;
         font-size: 3rem;
         font-weight: 700;
         font-size: 42px;
@@ -61,6 +53,7 @@
           display: block;
         }
       }
+
       .body{
         font-size: 18px;
         text-align: left;
@@ -69,7 +62,7 @@
 
       .content-footer.meet-patrick{
         &::after{
-          width: 210px;
+          width: 190px;
         }
       }
     }
@@ -77,17 +70,14 @@
     .about-image{
       flex:1;
       margin-bottom: 14px;
-      // box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
       @media only screen and (min-width : 760px) {
         min-width: 417px;
         max-height: 481px;
-        // max-width: 420px;
       }
 
       @media only screen and (min-width : 990px) {
         order: 2;
-        // min-width: 417px;
       }
     }
   }
