--- a/src/styles/attorneyProfile.scss
+++ b/src/styles/attorneyProfile.scss
@@ -1,6 +1,12 @@
 .attorney-profile{
-  padding-top: 115px;
-  margin-bottom: 4rem;
+  padding-top: 60px;
+  padding-bottom: 0px;
+
+  @media only screen and (min-width : 650px) {
+    padding-top: 120px;
+    padding-bottom: 120px;
+
+  }
 
   h1.header{
     font-size: 42px;
@@ -17,27 +23,21 @@
       min-width: 300px;
       flex:1;
 
-      // box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-
       @media only screen and (min-width : 760px) {
         min-width: 417px;
         max-height: 481px;
-        // max-width: 420px;
       }
-      // box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-      // grid-area: image;
     }
 
     .about-patrick{
-
       background-color: white;
 
       .title{
         font-size: 22px;
         line-height: 26px;
         margin-bottom: 25px;
-
       }
+
       .body{
         font-size: 18px;
         line-height: 24px;
@@ -45,21 +45,18 @@
           margin-bottom: 1rem;
         }
       }
+
       @media only screen and (min-width : 760px) {
         min-width: 400px;
         text-align: left;
         padding-right:42px;
         flex: 3;
       }
-
     }
-
   }
 
   .wrap{
     grid-template-columns:
-      // minmax(400px, 1fr)
-      // minmax(400px, 1fr);
       1fr
       1fr;
     grid-template-areas:
@@ -79,7 +76,6 @@
       &:last-child{
         margin-bottom: 0;
       }
-
     }
 
     p{
@@ -97,13 +93,6 @@
       display: inline;
     }
 
-
-
-
-    @media only screen and (min-width : 600px) {
-      display: grid;
-    }
-
     .box{
       padding: 40px 37px 37px 37px;
       background-color: #e9e9e9;
@@ -113,20 +102,27 @@
         margin-bottom: 18px;
         // margin-top: 49px;
       }
+      margin-bottom: 40px;
+      &:first-child{
+        margin-top: 40px;
+      }
+      @media only screen and (min-width : 600px) {
+        margin-bottom: 0;
+        &:first-child{
+          margin-top: 0;
+        }
+      }
     }
 
+
+
+    @media only screen and (min-width : 600px) {
+      display: grid;
+    }
   }
-
-
-
-
-
-
-
 
   .training{
     grid-area: training;
-    // background-color: #E2DFDE;
     .bold{
       display: block;
     }
@@ -134,21 +130,17 @@
 
   .education{
     grid-area: education;
-    // background-color: #E2DFDE;
   }
+
   .honors{
     grid-area: honors;
     .chunk.bold{
       display: block;
       margin-bottom: 25px;
     }
-
-    // background-color: #F5F5F7;
   }
+
   .legal{
     grid-area: legal;
-
-    // background-color: #F9F6F4;
   }
-
 }
