--- a/src/styles/capabilities.scss
+++ b/src/styles/capabilities.scss
@@ -1,19 +1,31 @@
 .capabilities{
   // padding: 3rem 0;
+  @media only screen and (min-width : 650px) {
+    padding: 3.2rem;
+  }
+  padding: 2rem 15px;
 
-    padding: 3rem;
+
     h1{
       color: white;
       margin-top: 0;
       text-align: center;
-      margin-bottom: 1rem;
+      // margin-bottom: 1rem;
+      font-size: 28px;
+      @media only screen and (min-width : 650px) {
+        font-size: 32px;
+      }
     }
     p{
       color: #6fa2c8;
       text-align: center;
-      font-size: 22px;
+      font-size: 20px;
       font-family: 'Open Sans', sans-serif;
       font-weight: bold;
+      margin: 10px 0;
+      @media only screen and (min-width : 650px) {
+        font-size: 22px;
+      }
       // width: 60%;
       // margin: auto;
       // margin-bottom: 2rem;
