--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -1,18 +1,52 @@
 .footer{
-  padding: 65px 0;
+  padding-top: 35px;
+  padding-bottom: 35px;
+
   color: white;
   background-color: black;
   text-align: center;
+
+  @media only screen and (min-width : 650px) {
+    padding-top: 65px;
+    padding-bottom: 65px;
+  }
+
   nav{
     display: block;
     margin: auto;
-    margin-bottom: 33px;
+    margin-bottom: 23px;
+
+    @media only screen and (min-width : 650px) {
+      margin-bottom: 37px;
+    }
     ul.footer-nav{
       li{
-        margin-right: 30px;
-        display: inline;
+        margin-right: 10px;
+        // display: inline;
+        font-size: 16px;
+        padding: 5px 0;
+
+        @media only screen and (min-width : 400px) {
+          display: inline;
+          padding: 0;
+          margin: 0 10px;
+
+        }
         a{
           color: white;
+        }
+      }
+    }
+
+    @media only screen and (min-width : 650px) {
+      ul.footer-nav{
+        li{
+          margin-right: 30px;
+          font-size: 16px;
+          display: inline;
+          a{
+            color: white;
+          }
         }
       }
     }
@@ -20,13 +54,20 @@
   .title{
     font-size: 32px;
     color: #6fa2c8;
-    line-height: 42px;
+    // line-height: 42px;
+    margin-bottom: 10px;
 
+  }
+
+  .title:hover{
+    text-decoration: underline;
   }
   .tagline{
     font-size: 22px;
     color: #6fa2c8;
     line-height: 26px;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: bold;
 
   }
   .copyright{
