--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -3,15 +3,13 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:700&display=swap');
 
 html {
-  // background-color: lavenderblush;
-  // margin: 0;
-   scroll-behavior: smooth;
+ scroll-behavior: smooth;
 
-   @media (prefers-reduced-motion: reduce) {
-      html {
-        scroll-behavior: auto;
-      }
+ @media (prefers-reduced-motion: reduce) {
+    html {
+      scroll-behavior: auto;
     }
+  }
 }
 
 * { margin:0; padding:0; box-sizing:border-box; }
@@ -24,9 +22,9 @@ p, address, div, li {
   font-family: 'Quattrocento Sans', sans-serif;
 }
 
-p{
-  margin: 0;
-}
+// p{
+//   margin: 0;
+// }
 
 a{
   color: black;
@@ -37,22 +35,21 @@ a:hover{
   text-decoration: underline;
 }
 
-.overlay {
-  position: relative;
-}
+// .overlay {
+//   position: relative;
+// }
 
-.overlay:before{
-  position: absolute;
-  content:" ";
-  top:0;
-  left:0;
-  opacity: 0.9;
-  width:100%;
-  height:100%;
-  display: none;
-  z-index:0;
-  background-image: linear-gradient(to bottom, #a8cfe6, #6fa2c8);
-}
+// .overlay:before{
+//   position: absolute !important;
+//   content:" " !important;
+//   top:0 !important;
+//   left:0 !important;
+//   opacity: 0.4 !important;
+//   width:100% !important;
+//   height:100% !important;
+//   // display: none;
+//   background-image: linear-gradient(to bottom, #a8cfe6, #6fa2c8) !important;
+// }
 
 
 
