--- a/src/styles/practiceAreas.scss
+++ b/src/styles/practiceAreas.scss
@@ -1,14 +1,17 @@
 #practice-areas-id{
-  // margin-top: 3rem;
   background-image: linear-gradient(to bottom, #415169, #6fa2c8);
   padding-bottom: 202px;
+  padding: 70px 0 70px;
+
+  @media only screen and (min-width : 650px) {
+    padding: 145px 0 202px;
+  }
 
   .section-header{
     font-size: 42px;
     color: #9fd9c5;
-    padding: 145px 0 45px;
+    padding-bottom: 45px;
   }
-
 
   a.p-area:hover{
     text-decoration: none;
@@ -21,33 +24,30 @@
     flex-direction: row;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
-
-
     .text{
       flex: 1;
       align-items: flex-end;
       display: flex;
       flex-wrap: wrap;
-
       align-items: center;
       background-color: white;
       padding: 42px;
-      // justify-content: flex-end;
+
       .header{
         flex: 0 0 100%;
-        // height: 33.33%;
-        // margin-bottom: 1rem;
         font-size: 22px;
         line-height: 26px;
+        margin-bottom: 10px;
 
+        @media only screen and (min-width : 650px) {
+          // margin-bottom: 0px;
+        }
       }
+
       .body{
         flex: 0 0 100%;
-        // height: 33.33%;
         font-size: 18px;
         line-height: 24px;
-
-
         margin-bottom: 1rem;
 
         @media only screen and (min-width : 760px) {
@@ -57,30 +57,22 @@
 
       .content-footer{
         flex: 0 0 100%;
-        // height: 33.33%;
-        // display: flex;
-        // align-self: flex-end;
         font-size: 18px;
+
         &::after{
-          width: 110px;
+          width: 103px;
         }
-        // margin-bottom: 52px;
-
       }
-
-
     }
+
     .image{
-      // flex: 1;
-      @media only screen and (min-width : 760px) {
-        min-width: 300px;
-        flex: 1;
-        // min-height: 300px;
-      }
       min-height: 300px;
       min-width: 100%;
 
+      @media only screen and (min-width : 760px) {
+        min-width: 300px;
+        flex: 1;
+      }
     }
-
   }
 }
