--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -1,22 +1,20 @@
 .contact{
   text-align: center;
+  background-image: linear-gradient(to top, #7589a3, #415169);
+  padding: 60px 0 0px;
 
-  @media only screen and (min-width : 741px) {
+  @media only screen and (min-width : 991px) {
      text-align: left;
      padding: 120px 0 120px;
   }
-  // margin-top: 2rem;
-  background-image: linear-gradient(to top, #7589a3, #415169);
-  padding: 60px 0 60px;
 
-  .marker{
-    background-color: red;
-
-    border: 2px solid black;
-    border-radius: 50%;
-    height: 15px;
-    width: 15px;
-  }
+  // .marker{
+  //   background-color: red;
+  //   border: 2px solid black;
+  //   border-radius: 50%;
+  //   height: 15px;
+  //   width: 15px;
+  // }
 
   .wrap{
     display: flex;
@@ -27,7 +25,7 @@
       flex: 1;
       min-width: 290px;
       @media only screen and (min-width : 650px) {
-        min-width: 300px;
+        min-width: 320px;
 
       }
 
@@ -70,7 +68,7 @@
 
         margin: auto;
         margin: 40px auto;
-        @media only screen and (min-width : 741px) {
+        @media only screen and (min-width : 991px) {
           margin-left: 0;
 
 
