--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -63,15 +63,15 @@
     text-decoration: underline;
   }
   .tagline{
-    font-size: 22px;
+    font-size: 24px;
     color: #6fa2c8;
     line-height: 26px;
     font-family: 'Open Sans', sans-serif;
-    font-weight: bold;
+    font-weight: 300;
 
   }
   .copyright{
-    margin-top: 25px;
+    margin-top: 45px;
     font-size: 14px;
 
   }
