--- a/src/styles/practiceAreas.scss
+++ b/src/styles/practiceAreas.scss
@@ -1,16 +1,19 @@
 #practice-areas-id{
   background-image: linear-gradient(to bottom, #415169, #6fa2c8);
   padding-bottom: 202px;
-  padding: 70px 0 70px;
+  padding: 30px 0 40px;
 
   @media only screen and (min-width : 650px) {
     padding: 145px 0 202px;
   }
 
   .section-header{
-    font-size: 42px;
-    color: #9fd9c5;
-    padding-bottom: 45px;
+    font-size: 34px;
+    color: #6fa2c8;
+    padding-bottom: 35px;
+    @media only screen and (min-width : 500px) {
+      font-size: 42px;
+    }
   }
 
   a.p-area:hover{
