--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -1,12 +1,27 @@
 .contact{
   text-align: center;
   background-image: linear-gradient(to top, #7589a3, #415169);
-  padding: 60px 0 0px;
+  padding: 20px 0 20px;
+
+  @media only screen and (min-width : 600px) { 
+     padding: 120px 0 120px;
+  }
 
   @media only screen and (min-width : 991px) {
      text-align: left;
      padding: 120px 0 120px;
   }
+
+  h1.header{
+    font-size: 42px;
+    margin-bottom: 20px;
+    color: white;
+
+    @media only screen and (min-width : 500px) {
+      margin-bottom: 35px;
+    }
+  }
+
 
   // .marker{
   //   background-color: red;
@@ -20,13 +35,13 @@
     display: flex;
     flex-wrap: wrap;
     .map{
-      height: 400px;
+      min-height: 290px;
       width: 100%;
       flex: 1;
       min-width: 290px;
       @media only screen and (min-width : 650px) {
         min-width: 320px;
-
+        // height: 400px;
       }
 
 
@@ -42,7 +57,11 @@
       .title{
         font-size: 22px;
         line-height: 26px;
-        margin-bottom: 8px;
+        margin-bottom: 20px;
+
+        @media only screen and (min-width : 500px) {
+            margin-bottom: 8px;
+        }
       }
       .bold{
         font-family: 'Work Sans', sans-serif;
@@ -86,11 +105,6 @@
   }
 
 
-  h1.header{
-    font-size: 42px;
-    margin-bottom: 35px;
-    color: white;
-  }
 
   // .info{
   //   margin-bottom: 1rem;
