--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -58,26 +58,37 @@
 
       .body{
         font-size: 18px;
-        text-align: left;
+        text-align: center;
         line-height: 24px;
-        // @media only screen and (min-width : 990px) {
-        //   text-align: left;
-        // }
+        @media only screen and (min-width : 990px) {
+          text-align: left;
+        }
       }
 
       .content-footer.meet-patrick{
+
+
         font-size: 18px;
-        // text-align: center;
-        // margin-left: 20vw;
+        text-align: center;
+        position: relative;
+        // margin-left: 12vw;
         // margin-left: auto;
         // margin-right: auto;
         // display: inline-block;
-        // @media only screen and (min-width : 990px) {
-        //   margin-left: auto;
-        //   margin-right: auto;
-        // }
+        @media only screen and (min-width : 990px) {
+          text-align: left;
+        }
         &::after{
+          // left: 50%;
           width: 211px;
+          top: 25px;
+          left: 50%;
+          margin-left: -105px;
+
+          @media only screen and (min-width : 990px) {
+            left: 0;
+            margin-left: 0px;
+          }
         }
       }
     }
