--- a/src/styles/attorneyProfile.scss
+++ b/src/styles/attorneyProfile.scss
@@ -1,5 +1,5 @@
 .attorney-profile{
-  padding-top: 60px;
+  padding-top: 20px;
   padding-bottom: 0px;
 
   @media only screen and (min-width : 650px) {
@@ -9,9 +9,14 @@
   }
 
   h1.header{
-    font-size: 42px;
-    margin-bottom: 50px;
+    font-size: 34px;
+    margin-bottom: 15px;
     color: #6fa2c8;
+
+    @media only screen and (min-width : 500px) {
+      font-size: 42px;
+      margin-bottom: 50px;
+    }
   }
 
   .main-content{
@@ -20,7 +25,7 @@
     flex-direction: row;
     .image{
       min-height: 300px;
-      min-width: 300px;
+      min-width: 290px;
       flex:1;
 
       @media only screen and (min-width : 760px) {
@@ -35,7 +40,10 @@
       .title{
         font-size: 22px;
         line-height: 26px;
-        margin-bottom: 25px;
+        margin-bottom: 15px;
+        @media only screen and (min-width : 500px) {
+          margin-bottom: 25px;
+        }
       }
 
       .body{
@@ -102,9 +110,9 @@
         margin-bottom: 18px;
         // margin-top: 49px;
       }
-      margin-bottom: 40px;
+      margin-bottom: 20px;
       &:first-child{
-        margin-top: 40px;
+        margin-top: 20px;
       }
       @media only screen and (min-width : 600px) {
         margin-bottom: 0;
