--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -14,7 +14,7 @@
   nav{
     display: block;
     margin: auto;
-    margin-bottom: 23px;
+    margin-bottom: 15px;
 
     @media only screen and (min-width : 650px) {
       margin-bottom: 37px;
@@ -22,7 +22,6 @@
     ul.footer-nav{
       li{
         margin-right: 10px;
-        // display: inline;
         font-size: 16px;
         padding: 5px 0;
 
@@ -30,7 +29,6 @@
           display: inline;
           padding: 0;
           margin: 0 10px;
-
         }
         a{
           color: white;
@@ -55,7 +53,10 @@
     font-size: 32px;
     color: #6fa2c8;
     // line-height: 42px;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
+    @media only screen and (min-width : 500px) {
+      margin-bottom: 3px;
+    }
 
   }
 
@@ -68,10 +69,17 @@
     line-height: 26px;
     font-family: 'Open Sans', sans-serif;
     font-weight: 300;
+    margin-bottom: 25px;
+
+    @media only screen and (min-width : 400px) {
+      margin-bottom: 40px;
+    }
+
+
 
   }
   .copyright{
-    margin-top: 45px;
+
     font-size: 14px;
 
   }
